Fix the !(ENABLE(SHADOW_DOM) || ENABLE(DETAILS_ELEMENT)) after r196281 https://bugs.webkit.org/show_bug.cgi?id=154035

Reviewed by Antti Koivisto.

* dom/ComposedTreeIterator.h:
(WebCore::ComposedTreeIterator::Context::Context):


Canonical link: https://commits.webkit.org/172172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196365 268f45cc-cd09-0410-ab3c-d52691b4dbfc